[package]
name = "gwyh"
version = "0.1.0"
edition = "2021"
authors = ["Brenden Matthews <brenden@brndn.io>"]
categories = ["asynchronous", "concurrency", "network-programming"]
description = "gwyh is a sweet gossip library"
documentation = "https://docs.rs/dryoc"
keywords = [
    "async",
    "asynchronous",
    "eventually-consistent",
    "gossip",
    "network",
]
license = "LGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/brndnmtthws/gwyh"

# requires 1.65 for GATs
rust-version = "1.65"

[dependencies]
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21", features = ["full", "tracing"] }
dryoc = { version = "0.4", features = ["nightly", "serde", "simd_backend"] }
uuid = { version = "1.1", features = ["v4", "fast-rng", "serde"] }
rand = "0.8"
rand_chacha = { version = "0.3", features = ["simd"] }
lru = "0.10"
tracing = "0.1"
genserver = "0.1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
futures = "0.3"
lazy_static = "1.4.0"

[dev-dependencies]
test-log = { version = "0.2", features = ["log", "trace"] }
env_logger = "0.10"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
