[package]
authors = ["Brenden Matthews <brenden@brndn.io>"]
categories = ["asynchronous", "concurrency", "network-programming"]
description = "gwyh is a sweet gossip library"
documentation = "https://docs.rs/gwyh"
edition = "2021"
keywords = [
  "async",
  "asynchronous",
  "distributed",
  "gossip",
  "network",
]
license = "LGPL-3.0-only"
name = "gwyh"
readme = "README.md"
repository = "https://github.com/brndnmtthws/gwyh"
version = "0.1.1"

# requires 1.65 for GATs, 1.77 for group_by
rust-version = "1.77"

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde",
] }
dryoc = { version = "0.5", features = ["nightly", "serde", "simd_backend"] }
futures = "0.3"
genserver = "0.2"
lazy_static = "1.4.0"
lru = "0.12"
rand = "0.8"
rand_chacha = { version = "0.3", features = ["simd"] }
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21", features = ["full", "tracing"] }
tracing = "0.1"
uuid = { version = "1.1", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
env_logger         = "0.11"
test-log           = { version = "0.2", features = ["log", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
